added shooting, changed to point2d, made intellij run button work, added fixed physics updates